# corpus_coranicum_variants_dataset

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DATA.md  LICENSE  README.md  TODO.md  ayah_numbering_variants.csv  convert_ayah_variants.py  convert_to_csv.py  diagnose_matching.py  extract_cairo.py  find_multiple_variants.py  fix_variants.py  package-lock.json  package.json  pyproject.toml  scrape.js  test_variants.py  transliterate_to_arabic.py  walk.py
data/cairo_patches/: sajda_positions.json  word_boundary_fixes.json  word_content_fixes.json
docs/: CONTRIBUTING.md  DATA.md  TODO.md
scripts/: convert_ayah_variants.py  convert_to_csv.py  extract_cairo.py  fix_variants.py  normalize_arabic.py  scrape.js
scripts/debug/: diagnose_matching.py  find_multiple_variants.py  walk.py
tests/: ayah_variants_reference.csv  conftest.py  test_ayah_variants.py  test_transliterate_to_arabic.py  test_variants.py  transliterate_debug.csv  transliterate_to_arabic_cases.csv
